# huduma

./: .gitignore  README.md
.github/workflows/: ci.yml
src/: Huduma.sln  Huduma.sln.DotSettings  pyproject.toml
src/registry/: README.md  pyproject.toml  requirements.txt
src/registry/domain/: patient.py
src/registry/registry/domain/: patient.py
src/registry/tests/domain/: test_patient.py
src/registry/web/: main.py
src/shared/: README.md  pyproject.toml  requirements-dev.txt  setup.py
src/shared/domain/: common.py  money.py
src/shared/shared/domain/: common.py  money.py
src/shared/tests/domain/: test_common.py  test_money.py
src/sharedkernel/src/Huduma.SharedKernel/Custom/: LiveGuid.cs
src/sharedkernel/tests/Huduma.SharedKernel.Tests/: Huduma.SharedKernel.Tests.csproj
src/sharedkernel/tests/Huduma.SharedKernel.Tests/Custom/: LiveGuidTests.cs
